name: diser
version: 0.0.1
cabal-version: -any
build-type: Simple
license: PublicDomain
license-file: license
description: .
data-dir: ""
 
executable diser
    build-depends: JuicyPixels -any, base -any, bytestring -any,
                   conduit -any, containers -any, deepseq -any, ffmpeg-light -any,
                   matrix -any, mtl -any, parsec -any, pipes -any, pure-fft -any
    main-is: Main.hs
    buildable: True
    extensions: CPP
    hs-source-dirs: src
    other-modules: Data_iterators Processors ImageManipulation
                   Image_loading AdHoc Global Processors_common Processors2d
                   Recognize_demanded_processors Video Cmd_arguments
    ghc-options: -Wall -fwarn-tabs
 