name: diser
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: GPL3
license-file: license
description: .
data-dir: ""

executable diser
    build-depends: JuicyPixels -any
                 , base -any
                 , dlist -any
                 , bytestring -any
                 , conduit -any
                 --, conduit-extra -any
                 , containers -any
                 , deepseq -any
                 , ffmpeg-light -any
                 , matrix -any
                 , mtl -any
                 , parsec -any
                 , pipes -any
                 , pure-fft -any
                 , algebraic-graphs -any
                 , lens -any
    main-is: Main.hs
    buildable: True
    extensions: CPP
    hs-source-dirs: src
    other-modules: Data_iterators Processors ImageManipulation
                   Image_loading AdHoc Global Processors_common Processors2d
                   Recognize_demanded_processors Video Cmd_arguments What_i_have
                   ShakingAbacus ShakingAbacusCommon Type_22052017_classifier
    ghc-options: -Wall -fwarn-tabs

